tests/parser-test-files/bad-files/parse-method.2.error
error: Malformed method definition
  --> test:4:41
   |
 3 |  (define-class (Oops :a)
   |                --------- in this class definition
 4 |    (Ouch "This method stubbed its toe" :a Unit))
   |                                           ^^^^ unexpected trailing form
