tests/parser-test-files/bad-files/parse-method.2.coal
(package test)

(define-class (Oops :a)
  (Ouch "This method stubbed its toe" :a Unit))
